2005-04-13  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_netsync_largish_file.at: Add test for netsyncing largish
	(32MB) files.  This test is failing at present.
	* testsuite.at: Add new test.

2005-04-13  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_setup_checkout_modify_new_dir.at:
	* tests/t_update_off_branch.at: New tests.
	* testsuite.at: Add them.
	
	* commands.cc (checkout): Tweak branch checking logic.
	(update): Make user explicitly switch branches.

2005-04-13  Nathaniel Smith  <njs@codesourcery.com>

	* rcs_import.cc (import_cvs_repo): Check that user isn't trying to
	import a whole CVS repo.
	* tests/t_cvsimport.at: Test new check.
	
2005-04-13  Richard Levitte  <richard@levitte.org>

	* contrib/Notify.pl: Rename ...
	* contrib/monotone-notify.pl: ... to this.
	* Makefile.am (EXTRA_DIST): Take note of the change.
	* debian/docs: Distribute the contributions as well.
	* debian/compat, debian/files, debian/monotone.1: Remove, since
	they are self-generated by debhelper.  They were obviously added
	by mistake.

2005-04-13  Nathaniel Smith  <njs@codesourcery.com>

	* cert.cc (guess_branch): Call app.set_branch.
	* app_state.cc (create_working_copy): Call make_branch_sticky
	here...
	* commands.cc (checkout): ...instead of here.
	(approve, disapprove, fcommit, commit): Don't call app.set_branch
	on guess_branch's output.
	(checkout): Call guess_branch.
	
	* tests/t_sticky_branch.at: 
	* tests/t_checkout_id_sets_branch.at: New tests.
	* testsuite.at: Add them.

2005-04-12  Florian Weimer  <fw@deneb.enyo.de>

	* app_state.cc (app_state::allow_working_copy): Only update
	branch_name from the options file if it has not yet been set.  Log
	the branch name.
	(app_state::set_branch): No longer update the options map.
	(app_state::make_branch_sticky): New function which copies the
	stored branch name to the options map.  Only commands which call
	this function change the branch default stored in the working
	copy.
